--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vuetify": "^3.7.18"
   },
   "devDependencies": {
